Ensure full page height on iOS.

--- a/public/style.css
+++ b/public/style.css
@@ -194,7 +194,7 @@ span.icon svg {
 #app {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   flex-direction: column;
   justify-content: center;
 }
